# EGOSIS

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  EngineSettings.json  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Assets/: AutoSaved.scene
Assets/Anim/: Rapi.json
Assets/Curves/UI/: Cooldown.uicurve  DamageAlpha.uicurve  DamageX.uicurve  DamageY.uicurve  Drop.uicurve  FadeInOut.uicurve
Assets/Fbx/: Alice.fbxasset  AmazingWonderland.fbxasset  AmazingWonderland2.fbxasset  Body_L.fbxasset  BoxHuman.fbxasset  Cube.fbxasset  EGOweapon.fbxasset  EGOweapon_Blade_1.fbxasset  EGOweapon_Blade_2.fbxasset  EGOweapon_Blade_3.fbxasset  EGOweapon_Blade_4.fbxasset  EGOweapon_Blade_5.fbxasset  EGOweapon_Blade_6.fbxasset  EGOweapon_Core.fbxasset  EGOweapon_Eye.fbxasset  EGOweapon_Tendon.fbxasset  FatGuy_L_copy.fbxasset  IcoSphere.fbxasset  Monkey.fbxasset  Rapi.fbxasset  Sphere.fbxasset  Tia.fbxasset  Tia_Animaition_Run,Rolling,IDLE,Turn,Attack.fbxasset  Torus.fbxasset  Tree.fbxasset  Weapon1.fbxasset  Wonderland.fbxasset  Wonderland_part1.fbxasset  Wonderland_part2.fbxasset  Wonderland_part3.fbxasset  Wonderland_part4.fbxasset  Wonderland_part5.fbxasset  Zombie_Run.fbxasset  acrh_low.fbxasset  boss.fbxasset  box.fbxasset  char.fbxasset  column_down.fbxasset  column_middle.fbxasset  door_low.fbxasset  (+9 more)
Assets/Prefabs/: Entity_11.prefab
Assets/Scenes/: #(New!)Combat.scene  #Combat.scene  #WeaponTest.scene  AnimTest.scene  CombatTest.scene  Combat_AliceTest.scene  ComputeEffectTestScene.scene  FbxTestScene.scene  MaterialTestScene.scene  Scene3.scene
Assets/Scenes/Animation/: 3DAdvancedAnimationScene.scene  3DAnimationScene.scene  AliceSwing.scene
Assets/Scenes/Camera/: 3DCameraScene.scene  CameraMove.scene  CameraSetting.scene
Assets/Scenes/DuellumCycli/: CombatTestScene.scene  ProtoCombat.scene  PrototypeDungeon.scene  PrototypeDungeon_BigGround.scene
Assets/Scenes/Material/: MaterialTest.scene
Assets/Scenes/Physics/: HitboxTest.ui.scene  PhysX_BasicTest.scene  PhysX_GimmickTest.scene  PhysX_RapiTest.scene  PhysX_StressTest.scene
Assets/Scenes/SceneChange/: SceneChange1.scene  SceneChange2.scene
Assets/Scenes/Sound/: 3DSoundScene.scene
Assets/Scenes/UI/: AdvancedAliceUI.scene  TestAliceUI.scene
Assets/Scripts/: AddGetRemoveComponentTest.cpp  AddGetRemoveComponentTest.h  AnimBlueprintExample.cpp  AnimBlueprintExample.h  AnimationKeySwitch.cpp  AnimationKeySwitch.h  AudioDemoScript.cpp  AudioDemoScript.h  AudioSourceSetupExample.cpp  AudioSourceSetupExample.h  CameraController.cpp  CameraController.h  CameraDirector.cpp  CameraDirector.h  CameraFollow.cpp  CameraFollow.h  CameraManager.cpp  CameraManager.h  CameraMovement.cpp  CameraMovement.h  CameraRigPreset.cpp  CameraRigPreset.h  CharacterAnimatorComponent.cpp  CharacterAnimatorComponent.h  CharacterAnimatorWithPhy.cpp  CharacterAnimatorWithPhy.h  CharacterMovement.cpp  CharacterMovement.h  CharacterPhysMove.cpp  CharacterPhysMove.h  CreateFbxTest.cpp  CreateFbxTest.h  DestroyTest.cpp  DestroyTest.h  EffectExample.cpp  EffectExample.h  MaterialAlphaExample.cpp  MaterialAlphaExample.h  NewScript.cpp  NewScript.h  (+23 more)
Assets/Scripts/AdvancedAliceUI/: AdvancedUIController.cpp  AdvancedUIController.h
Assets/Scripts/AliceUI/: UIButtonController.cpp  UIButtonController.h  UIGaugeController.cpp  UIGaugeController.h  UIHudExample.cpp  UIHudExample.h  UIImageController.cpp  UIImageController.h  UITextController.cpp  UITextController.h
Assets/Scripts/Animation/: AnimBlueprintExample.cpp  AnimationKeySwitch.cpp  CharacterAnimatorComponent.cpp
Assets/Scripts/Audio/: AudioDemoScript.cpp  AudioDemoScript.h  AudioSourceSetupExample.cpp
Assets/Scripts/Camera/: CameraController.cpp  CameraController.h  CameraDirector.cpp  CameraDirector.h  CameraFollow.h  CameraManager.cpp  CameraMovement.cpp  CameraRigPreset.cpp  CameraRigPreset.h  OnlyCameraController.cpp  OnlyCameraController.h
Assets/Scripts/Combat/: C_ActionFsm.cpp  C_ActionFsm.h  C_BossBrainComponent.cpp  C_BossBrainComponent.h  C_CombatApply.cpp  C_CombatApply.h  C_CombatContracts.h  C_CombatEventBus.cpp  C_CombatEventBus.h  C_CombatResolver.cpp  C_CombatResolver.h  C_CombatSessionComponent.cpp  C_CombatSessionComponent.h  C_Fighter.cpp  C_Fighter.h  C_PlayerInputSourceComponent.cpp  C_PlayerInputSourceComponent.h  CombatAuthority.md
Assets/Scripts/Physics/: Gimmick.cpp  Gimmick.h  StressRigidbodySpawner.cpp  StressRigidbodySpawner.h
Engine/: Setup.bat  build_msvc.cmd
Engine/src/3Dmodel/: FbxAnimation.cpp  FbxGeometry.cpp  FbxGeometry.h  FbxMaterial.cpp  FbxMaterial.h  FbxModel.cpp  FbxModel.h  FbxSkeleton.cpp  FbxSkeleton.h  FbxTypes.h
Engine/src/AliceUI/: BindWidget.h  UIAnimationComponent.h  UIButtonComponent.h  UICommon.h  UICurveAsset.cpp  UICurveAsset.h  UIFont.cpp  UIFont.h  UIGaugeComponent.h  UIHover3DComponent.h  UIRenderer.cpp  UIRenderer.h  UIShaderCode.cpp  UIShaderCode.h  UIShakeComponent.h  UITextComponent.h  UITransformComponent.h  UIWidgetComponent.h
Engine/src/Audio/: AudioSystem.cpp  AudioSystem.h  SoundManager.cpp
Engine/src/Components/: AdvancedAnimationComponent.h  AnimBlueprintComponent.h  AttackDriverComponent.h  AudioListenerComponent.h  AudioSourceComponent.h  CameraBlendComponent.h  CameraComponent.h  CameraFollowComponent.h  CameraLookAtComponent.h  CameraSpringArmComponent.h  ComponentStorage.h  ComputeEffectComponent.h  DebugDrawBoxComponent.h  EffectComponent.h  HealthComponent.h  HurtboxComponent.h  IDComponent.h  PostProcessVolumeComponent.h  RectLightComponent.h  SkinnedAnimationComponent.h  SkinnedMeshComponent.h  SocketAttachmentComponent.h  SocketComponent.h  SocketPoseOutputComponent.h  SoundBoxComponent.h  TrailEffectComponent.h  TransformComponent.h  WeaponTraceComponent.h
Engine/src/Core/: AdvancedAnimSystem.cpp  AdvancedAnimSystem.h  AttackDriverSerialization.h  CameraSystem.cpp  CameraSystem.h  Component.h  Entity.h  (+45 more)
Resource/BasicMesh/: Corn.fbx  Cube.fbx  Quad.fbx  Sphere.fbx
Resource/fbx/: imgui.ini  tile0120.fbx
ScriptsBuild/: CMakeLists.txt
(+295 files in other folders)
